syntax = "proto3";

package qutlas.jobs;

service JobService {
  rpc GetNextJob (HubRequest) returns (JobResponse);
  rpc ReportHeartbeat (HeartbeatRequest) returns (Empty);
  rpc ReportJobComplete (JobCompleteRequest) returns (Empty);
  rpc ReportJobFailed (JobFailedRequest) returns (Empty);
}

message HubRequest {
  string hub_id = 1;
}

message JobResponse {
  JobManifest job = 1;
}

message JobManifest {
  string job_id = 1;
  string customer_id = 2;
  string asset_id = 3;
  string machine_type = 4;
  bytes tool_path = 5;
  double estimated_time = 6;
  string material_spec = 7;
}

message HeartbeatRequest {
  string hub_id = 1;
  int64 timestamp = 2;
  repeated MachineStatus machines = 3;
  double cpu_usage = 4;
  double memory_usage = 5;
}

message MachineStatus {
  string machine_id = 1;
  string type = 2;
  string status = 3;
  string current_job = 4;
}

message JobCompleteRequest {
  string job_id = 1;
  string machine_id = 2;
  string status = 3;
  double cycle_time = 4;
  int32 rejects = 5;
  int32 tool_changes = 6;
  Quality quality = 7;
}

message Quality {
  repeated double measured_dimensions = 1;
  double tolerance = 2;
}

message JobFailedRequest {
  string job_id = 1;
  string machine_id = 2;
  string error = 3;
}

message Empty {}
